______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.203:

* XINS/Java Server Framework:
  - Changed the format of the context identifier to app@hostname:time:random.

* XINS/Java Common Library:
  - Replaced the way to find the hostname for the hostname task.
  - Added serialize() function to PropertyReaderUtils that constructs a
    LogdocSerializable for a PropertyReader.
  - Changed behaviour of TargetDescriptor:
    . if the connection time-out is not set (0 or negative int value) then it
      defaults to the total time-out;
    . if the socket time-out is not set (0 or negative int value) then it
      defaults to the total time-out.
    This should fix SF.net bug 1008613. This bug has been in XINS since
    release 0.195.

* XINS/Java Client Framework:
  - Removed the deprecated getCode() method from UnsuccessfulCallException.
  - Extended interface of UnacceptableCallResultException.
  - Removed the unused class MultipleIPAddressesException.
  - Overhaul of logdoc entries.
  - Explicitly defined duration in CallException as the call duration.
  - Changed UnacceptableCallResultException to extend CallException again.
  - Removed reference to JDom, the org.jdom.Element is replaced with
    org.xins.client.DataElement.
    Note: this change may break your code compatibility if you use a CAPI API.
  - Replaced the Dom parser with a SAX parser to parse the XML.

* Logdoc:
  - Changed the interface of class AbstractLogdocSerializable (introduced in
    XINS 0.201) in an incompatible way. All subclasses have been adapted
    accordingly.

* Generated specification documentation:
  - Fixed regeneration of the test forms if the environments.xml file has
    changed. This bug has been in XINS since version 0.183.

* Generated build file:
  - Set the format of the web.xml with Unix line feed.
  - The index of the APIs are regenerated if needed when executing
    specdocs-<api>.

* Libraries: